[project]
name = "calendar-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.1.0",
    "fastapi>=0.116.1",
    "httpx[socks]>=0.28.1",
    "icalendar>=6.3.1",
    "opencc>=1.1.9",
    "uvicorn>=0.35.0",
]
